--- a/src/web/templates/monthly_revenue_summary.html
+++ b/src/web/templates/monthly_revenue_summary.html
@@ -9,7 +9,7 @@
 <span class="breadcrumb-separator">›</span>
 <a href="#" onclick="document.querySelector('.nav-section.operational .nav-dropdown').style.opacity='1'">Operational</a>
 <span class="breadcrumb-separator">›</span>
-<span class="breadcrumb-current">Monthly Revenue Summary (Nord)</span>
+<span class="breadcrumb-current">Monthly Revenue Summary</span>
 {% endblock %}
 
 {% block extra_styles %}
